# c-juniorpen01s-test

./: .clangd  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
core/: CMakeLists.txt
core/include/core/: array.h  malloc.h  option.h  realloc.h  vector.h
core/src/core/: malloc.c  realloc.c
core/tests/: array_test.c  option_test.c  vector_test.c
include/: vector.h
juniorpen01s_test/: CMakeLists.txt
juniorpen01s_test/include/: juniorpen01s_test.h
juniorpen01s_test/src/: juniorpen01s_test.c
tests/: vector_test.c
