file(GLOB_RECURSE sources src/*.c)

add_library(juniorpen01s_test ${sources})
target_include_directories(juniorpen01s_test PRIVATE include)
target_link_libraries(juniorpen01s_test PRIVATE core)

if(BUILD_TESTING)
	file(GLOB_RECURSE testSources tests/*_test.c)
	foreach(testSource IN LISTS testSources)
		cmake_path(GET testSource STEM testSourceName)
		add_executable(${testSourceName} ${testSource})
		target_link_libraries(${testSourceName} PRIVATE juniorpen01s_test)
		add_test(NAME ${testSourceName} COMMAND ${testSourceName})
	endforeach()
endif()